WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213441
Keyframe animation doesn't 't show up in the Animations timeline
https://bugs.webkit.org/show_bug.cgi?id=213441
Summary
Keyframe animation doesn't 't show up in the Animations timeline
Simon Fraser (smfr)
Reported
2020-06-20 20:15:33 PDT
Created
attachment 402413
[details]
Testcase With the attached testcase, I don't see a green bar in the "Media and Animations" bar in the timelines tab, even after reload. Webkit
r263322
inspected by Safari at
r263222
.
Attachments
Testcase
(1.64 KB, text/html)
2020-06-20 20:15 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(18.25 KB, patch)
2020-06-22 20:05 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Patch
(19.08 KB, patch)
2020-06-22 21:14 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-06-20 20:22:33 PDT
Doesn't work with Safari inspecting itself either.
Devin Rousso
Comment 2
2020-06-22 20:05:58 PDT
Created
attachment 402529
[details]
Patch
Devin Rousso
Comment 3
2020-06-22 21:14:12 PDT
Created
attachment 402532
[details]
Patch
EWS Watchlist
Comment 4
2020-06-22 21:14:48 PDT
This patch modifies the inspector protocol. Please ensure that any frontend changes appropriately use feature checks for new protocol features.
Blaze Burg
Comment 5
2020-06-23 08:51:09 PDT
Comment on
attachment 402532
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402532&action=review
r=me. EWS failure seems unrelated.
> Source/WebInspectorUI/UserInterface/Models/Animation.js:252 > + // COMPATIBILITY (iOS 14): an iteration count of `Infinity` was not properly handled.
Nice.
EWS
Comment 6
2020-06-23 09:12:41 PDT
Committed
r263400
: <
https://trac.webkit.org/changeset/263400
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402532
[details]
.
Radar WebKit Bug Importer
Comment 7
2020-06-23 09:13:15 PDT
<
rdar://problem/64646884
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug