Keyframe animation doesn't 't show up in the Animations timeline https://bugs.webkit.org/show_bug.cgi?id=213441

Reviewed by Brian Burg.

Source/JavaScriptCore:

* inspector/protocol/Animation.json:
An `interationCount` of `Infinity` is not JSON serializable, so represent it as `-1` instead.

Source/WebCore:

Test: inspector/animation/lifecycle-css-animation.html

* inspector/agents/InspectorAnimationAgent.cpp:
(WebCore::buildObjectForEffect):

Source/WebInspectorUI:

* UserInterface/Models/Animation.js:
(WI.Animation):
(WI.Animation.prototype._updateEffect):
An `interationCount` of `Infinity` is not JSON serializable, so represent it as `-1` instead.

* UserInterface/Models/MediaTimelineRecord.js:
(WI.MediaTimelineRecord):
* UserInterface/Views/MediaTimelineDataGridNode.js:
(WI.MediaTimelineDataGridNode.prototype.createCellContent):
(WI.MediaTimelineDataGridNode.prototype.filterableDataForColumn):
The DOM node may not be able to be instrumented if the timeline recording starts before the
frontend has had a chance to request the main document, so it's possible for the DOM node
to not be set.

LayoutTests:

* inspector/animation/resources/lifecycle-utilities.js:
* inspector/animation/lifecycle-css-animation.html:
* inspector/animation/lifecycle-css-animation-expected.txt:


Canonical link: https://commits.webkit.org/226306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263400 268f45cc-cd09-0410-ab3c-d52691b4dbfc